--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "migrate_local": "sequelize db:migrate --url sqlite://C:\\Users\\Jorge\\Desktop\\calendario\\calendar.sqlite",
     "seed_local": "sequelize db:seed:all --url sqlite://C:\\Users\\Jorge\\Desktop\\calendario\\calendar.sqlite",
     "open_heroku": "heroku open",
-    "migrate_heroku": "heroku run ./node_modules/.bin/sequelize db:migrate --url \\postgres://stwejfnlsrfgum:c2873f05379d9357d7f4649c48f530dcdd81430e31e95ea77a543ec4ed338c4f@ec2-79-125-8-105.eu-west-1.compute.amazonaws.com:5432/dendh81kl8he0j",
-    "seed_heroku": "heroku run ./node_modules/.bin/sequelize db:seed:all --url \\postgres://stwejfnlsrfgum:c2873f05379d9357d7f4649c48f530dcdd81430e31e95ea77a543ec4ed338c4f@ec2-79-125-8-105.eu-west-1.compute.amazonaws.com:5432/dendh81kl8he0j",
+    "migrate_heroku": "heroku run ./node_modules/.bin/sequelize db:migrate --url \\postgres://stwejfnlsrfgum:c2873f05379d9357d7f4649c48f530dcdd81430e31e95ea77a543ec4ed338c4f@ec2-79-125-8-105.eu-west-1.compute.amazonaws.com:5432/dendh81kl8he0j --app calendario-etsit",
+    "seed_heroku": "heroku run ./node_modules/.bin/sequelize db:seed:all --url \\postgres://stwejfnlsrfgum:c2873f05379d9357d7f4649c48f530dcdd81430e31e95ea77a543ec4ed338c4f@ec2-79-125-8-105.eu-west-1.compute.amazonaws.com:5432/dendh81kl8he0j --app calendario-etsit",
     "reset_heroku": "heroku pg:reset DATABASE",
     "mon_heroku": "heroku maintenance:on",
     "moff_heroku": "heroku maintenance:off"
